<resources>
    <string name="app_name">calories_tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_title">Calories Tracker</string>
    <string name="login_email_label">Email</string>
    <string name="login_password_label">Password</string>
    <string name="login_login_button">Login</string>
    <string name="login_signup_button">Sign Up</string>
    <string name="empty_string" />
    <string name="login_singup_navigate_text">Does not have an account, register here</string>
    <string name="cfpassword_login_value">Confirm Password</string>
    <string name="login_login_navigate_text">Already had an account? click here to login</string>


    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="drawer_signout">Log Out</string>
    <string name="drawer_item_homepage">Homepage</string>
    <string name="drawer_item_new_meal">New Meal</string>
    <string name="drawer_item_history">History</string>
    <string name="tab">All</string>
    <string name="tab_recent">Recent</string>
    <string name="tab_my_meals">My Meals</string>
    <string name="tab_my_items">My Items</string>
    <string name="search_bar">type in the item here</string>
    <string name="textview_bestMatch">Best Match</string>
    <string name="textview_bestmatch">Best Match</string>
    <string name="textview_bestMatch_desc">the item goes here</string>
    <string name="button">Search</string>


    <string name="textview_home_page_title">Your day in food</string>
    <string name="cals_consumed_today_home_page"> Consumed Today </string>
    <string name="add_meal_button_home_page">+ Add Meal</string>
    <string name="history_title">Your history meals</string>
    <string name="button_meal_detail">search</string>
    <string name="textview_carbs">carbs</string>
    <string name="textview_fat">fat</string>
    <string name="textview_protein">protein</string>
    <string name="textview_cal">cal</string>
    <string name="button_meal_detail_add">Add</string>
    <string name="textview_item_meal">name</string>
    <string name="textview_item_meal_cal">cal</string>
    <string name="textview_info_frag">Results</string>
    <string name="textview_vitaA">vitaA</string>
    <string name="textview_choles">cholesterol</string>
    <string name="textview_sodium">sodum</string>
    <string name="textview_vitaB">vitaB</string>
    <string name="textview_vitaC">vitaC</string>
    <string name="textview_vitaD">vitaD</string>
    <string name="textview_calcium">calcium</string>
    <string name="textview_iron">iron</string>
    <string name="static_cholesterol">Cholesterol</string>
    <string name="static_sodium">Sodium</string>
    <string name="static_vitaA">Vitamin A</string>
    <string name="static_vitaB">Vitamin B</string>
    <string name="static_vitaC">Vitamin C</string>
    <string name="static_vitaD">Vitamin D</string>
    <string name="static_calcium">Calcium</string>
    <string name="static_iron">Iron</string>
    <string name="nutritional_info">Nutritional Info</string>
    <string name="textview_info_noResults">no results</string>
    <string name="homepage_nomeal">There\'s no recorded meals for today :)</string>
    <string name="button_mealDetail_back">Back</string>
</resources>