<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/group1"
        android:checkableBehavior="single" >
        <item
            android:id="@+id/item_drawer_homepage"
            android:title="@string/drawer_item_homepage" />
        <item
            android:id="@+id/item_drawer_newmeal"
            android:title="@string/drawer_item_new_meal" />
        <item
            android:id="@+id/item_drawer_history"
            android:title="@string/drawer_item_history" />
    </group>
    <group android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item_drawer_logout"
            android:title="@string/drawer_signout" />
    </group>
</menu>