<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:orientation="vertical"
    tools:context=".MealDetailFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mealDetail_fragment_meal_details"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center"
            android:text="@string/hello_blank_fragment"
            android:textAlignment="center"
            android:textColor="@color/primaryColor"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cal_mealDetails"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:text="@string/textview_cal"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/carbs_mealDetails"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:text="@string/textview_carbs"
            android:textAlignment="center"
            android:textColor="@color/primaryColor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fat_mealDetails"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:text="@string/textview_fat"
            android:textAlignment="center"
            android:textColor="@color/primaryColor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/protein_mealDetails"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:text="@string/textview_protein"
            android:textAlignment="center"
            android:textColor="@color/primaryColor"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:paddingTop="20dp"
        android:text="@string/nutritional_info"
        android:textAlignment="center"
        android:textColor="@color/primaryColor"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="229dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="168dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/static_cholesterol"
                android:textAlignment="viewStart"
                android:textColor="@color/primaryColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/static_sodium"
                android:textAlignment="viewStart"
                android:textColor="@color/primaryColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/static_vitaA"
                android:textAlignment="viewStart"
                android:textColor="@color/primaryColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/static_vitaB"
                android:textAlignment="viewStart"
                android:textColor="@color/primaryColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/static_vitaC"
                android:textAlignment="viewStart"
                android:textColor="@color/primaryColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/static_vitaD"
                android:textAlignment="viewStart"
                android:textColor="@color/primaryColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/static_calcium"
                android:textAlignment="viewStart"
                android:textColor="@color/primaryColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/static_iron"
                android:textAlignment="viewStart"
                android:textColor="@color/primaryColor"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="222dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_mealDetail_cholesterol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_choles"
                android:textAlignment="textEnd"
                android:textColor="@color/primaryColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView_mealDetail_sodium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_sodium"
                android:textAlignment="textEnd"
                android:textColor="@color/primaryColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/vitaA_mealDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_vitaA"
                android:textAlignment="textEnd"
                android:textColor="@color/primaryColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView_mealDetail_vitaB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_vitaB"
                android:textAlignment="textEnd"
                android:textColor="@color/primaryColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView_mealDetail_vitaC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_vitaC"
                android:textAlignment="textEnd"
                android:textColor="@color/primaryColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView_mealDetail_vitaD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_vitaD"
                android:textAlignment="textEnd"
                android:textColor="@color/primaryColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView_mealDetail_calcium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_calcium"
                android:textAlignment="textEnd"
                android:textColor="@color/primaryColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView_mealDetail_iron"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_iron"
                android:textAlignment="textEnd"
                android:textColor="@color/primaryColor"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_meal_detail"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:text="@string/button_meal_detail_add"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_mealDetail_back"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:text="@string/button_mealDetail_back"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>