<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/title_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/andika_new_basic"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="@color/primaryColor"
        android:textSize="34sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginBottom="60dp"
        app:srcCompat="@drawable/ic_baseline_analytics_24" />

    <TextView
        android:id="@+id/email_login_label"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_email_label"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email_login_value"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        android:text="@string/empty_string" />

    <TextView
        android:id="@+id/password_login_label"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_password_label"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password_login_value"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/cfpassword_login_label"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cfpassword_login_value"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/cfpassword_login_value"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:onClick="onClickButton"
        android:text="@string/login_login_button" />

    <TextView
        android:id="@+id/navigate_login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:onClick="onClickSwitchLoginSignUp"
        android:text="@string/login_singup_navigate_text"
        android:textAlignment="center"
        android:textStyle="bold|italic" />
</LinearLayout>